[BPK-2377]: Updated approach to dynamically update select based on input and also a fix for overflow of the dialling codes into telephone input Here we dynamically update the width based on the length of the value it needs to display

--- a/packages/bpk-component-phone-input/src/BpkPhoneInput.scss
+++ b/packages/bpk-component-phone-input/src/BpkPhoneInput.scss
@@ -27,12 +27,12 @@
   grid-column-gap: $bpk-spacing-sm;
 
   @include bpk-breakpoint-mobile {
-    grid-template-columns: max-content auto;
+    grid-template-columns: 10 * $bpk-spacing-sm auto;
   }
 
   &--large {
     @include bpk-breakpoint-mobile {
-      grid-template-columns: max-content auto;
+      grid-template-columns: 11 * $bpk-spacing-sm auto;
     }
   }
 
